--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 <div id="wrapper">
 <h1>Portfolio</h1>
 		<div class="webpagelinks">
-		<a href="pugindex.html"><img src="./images/puglink.png" width="500" height="400" >
+		<a href="pugindex.html"><img src="./images/puglink.PNG" width="500" height="400" >
 		
 		<a href="shoesite.html"><img src="./images/shoelogo.png" width="500" height="400" >
 		</div>
