--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			CSS.</strong></p> 
 	</div>
 	<div class="Programming">
-			<h3><b> Program language expierence</b></h3>
+			<h3><b> Program language experience</b></h3>
 			<ul class="myUL">
 				<li>HTML</li>
 				<li>CSS</li>
