--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
 			
 	<div class="summary">
 			<h1>Professional Summary</h1>
-			<p><strong>Internal support advocate with 8+ years in the financial industry.
-			Proficient in loan processing, account maintenance and ancillary products.
-			Dedicated, reliable, fast and efficient work ethic, effective in customer-
-			facing and internal-facing roles. High value for teamwork efforts, with an
-			eagerness to learn and impart knowledge. Analytical approach to guidelines
-			and processes to make training more effective using agile methodology; with
-			100+ hours of one-on-one peer training. Currently working towards a Computer
-			Programming and Analysis degree, with an intermediate skill level in HTML and
-			CSS.</strong></p> 
+			<p><strong>I am a passionate Computer Programming and Analysis student with a strong foundation in Java,
+				Python, HTML, CSS, and SQL. My previous experience in the financial industry has honed my analytical 
+				skills, attention to detail, and ability to work in fast-paced environments. I enjoy tackling new challenges,
+				using creativity and problem-solving to deliver effective solutions. With a commitment to continuous learning,
+				I am eager to apply my programming knowledge and analytical mindset to contribute to impactful projects. </strong></p> 
 	</div>
 	<div class="Programming">
 			<h3><b> Program language experience</b></h3>
