--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 	<div class="Programming">
 			<h3><b> Program language experience</b></h3>
 			<ul class="myUL">
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
 				<li>Java</li>
+				<li>Python</li>
+				<li>SQL</li>
+				<li>HTML/CSS</li>
 			</ul>
 	</div>
 </div>
